main : section ,services-pics, section-pane. (desctop )

--- a/css/main.css
+++ b/css/main.css
@@ -1,232 +1,12 @@
+/* Base */
 @import "./reset.css";
 @import "./fonts.css";
-
-:root {
-	--efbd68: #edb24e;
-	--ffb7a1: #ffb7a1;
-	--ffbfbe: #ffbfbe;
-	--919f88: #919f88;
-	--c8cfd7: #c8cfd7;
-	--95a1af: #95a1af;
-	--333333: #333;
-
-	--font-family: "Montserrat", sans-serif;
-	--second-family: "Nunito", sans-serif;
-}
-
-body {
-	font-family: "Montserrat", sans-serif;
-	font-optical-sizing: auto;
-	font-style: normal;
-	font-weight: 400;
-}
-
-/* .nunito {
-	font-family: "Nunito", sans-serif;
-	font-optical-sizing: auto;
-	font-weight: 700;
-	font-style: normal;
-} */
-.container {
-	margin: 0 auto;
-	max-width: 1806px;
-	width: 100%;
-	padding: 0 15px;
-}
-
-.btn {
-	display: inline-block;
-	padding: 17px 36px 16px;
-	min-width: 150px;
-	height: 50px;
-	border-radius: 50px;
-	background: var(--efbd68);
-	font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 14px;
-	text-transform: uppercase;
-	text-align: center;
-	color: var(--333333);
-	transition: all 0.2s ease-in;
-}
-
-.btn:hover {
-	color: #fff;
-	background-color: var(--333333);
-}
-
-.btn:active {
-	transform: scale(.9);
-}
-
-.logo__link:hover .logo__image {
-	filter: brightness(60%);
-}
-
-.logo__link:active .logo__image {
-	filter: brightness(40%);
-	transform: scale(.9);
-}
-
-.logo__image {
-	transition: all 0.2s ease-in;
-}
-
-/* ---------sections----------- */
-
-/* NAV*/
-.nav {
-	padding-top: 47px;
-	padding-bottom: 108px;
-}
-
-.nav__grid {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 30px;
-	align-items: center;
-}
-
-.nav-list {
-	display: flex;
-	align-items: center;
-	gap: 50px;
-	font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 156%;
-	color: var(--333333);
-}
-
-.nav-list__link {
-	color: var(--333333);
-	text-transform: capitalize;
-}
-
-.nav__logo {
-	text-align: center;
-}
-
-.nav__btn {
-	text-align: right;
-}
-
-/* HEADER */
-.header {
-	margin-bottom: 90px;
-}
-
-.header__grid {
-	position: relative;
-	display: grid;
-	grid-template-columns: 200px auto 200px;
-	gap: 30px;
-	align-items: end;
-}
-
-.header__round-text {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-}
-
-.header__col {
-	padding-bottom: 270px;
-}
-
-.header__content {
-	padding-top: 210px;
-}
-
-.scroll-text {
-	display: flex;
-	align-items: center;
-	gap: 15px;
-	font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 20px;
-	line-height: 200%;
-	color: var(--333333);
-}
-
-.scroll-text::before {
-	content: '';
-	width: 7px;
-	height: 7px;
-	display: block;
-	background-color: var(--333333);
-	border-radius: 50%;
-}
-
-.scroll-text__bullet-right {
-	flex-direction: row-reverse;
-}
-
-.header__image-wrapper {
-	position: relative;
-	margin-bottom: 41px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.header__img {
-	position: relative;
-	width: 534px;
-	height: 802px;
-	border-radius: 500px;
-	overflow: hidden;
-}
-
-.header__img::after {
-	position: absolute;
-	content: '';
-	display: block;
-	background-image: linear-gradient(360deg, #2c2c2c -20%, rgba(217, 217, 217, 0) 50%);
-	mix-blend-mode: multiply;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-}
-
-.header__title {
-	font-family: var(--second-family);
-	font-weight: 500;
-	font-size: 110px;
-	line-height: 91%;
-	letter-spacing: 0.09em;
-	text-transform: uppercase;
-	text-align: center;
-
-}
-
-.header__title--img {
-	color: #fff;
-	position: absolute;
-	bottom: 0;
-	z-index: 9;
-	width: 906px;
-	left: 50%;
-	transform: translate(-50%, -30px);
-}
-
-.header__title--black {
-	/* margin-top: -30px; */
-	/* transform: translateY(-100%); */
-	position: absolute;
-	bottom: 30px;
-}
-
-.header__desc {
-	max-width: 830px;
-	width: 100%;
-	margin: 0 auto;
-	font-family: var(--font-family);
-	font-weight: 400;
-	font-size: 20px;
-	line-height: 200%;
-	text-align: center;
-	color: var(--333333);
-}
+@import "/css/vars.css";
+@import "/css/base.css";
+/* BLOCKS */
+@import "/css/btn.css";
+@import "/css/logo.css";
+/* SECTIONS */
+@import "/css/nav.css";
+@import "/css/header.css";
+@import "/css/section.css";
