--- a/css/main.css
+++ b/css/main.css
@@ -10,5 +10,6 @@
 @import "nav.css";
 @import "header.css";
 @import "section.css";
+@import "section-pane-footer.css";
 /* slider */
 @import "slider.css";
