add footer desktop

--- a/css/logo.css
+++ b/css/logo.css
@@ -2,6 +2,10 @@
 	filter: brightness(60%);
 }
 
+.logo__link--footer:hover .logo__image {
+	filter: brightness(200%);
+}
+
 .logo__link:active .logo__image {
 	filter: brightness(40%);
 	transform: scale(.9);
