--- a/css/base.css
+++ b/css/base.css
@@ -3,18 +3,9 @@ body {
 	font-optical-sizing: auto;
 	font-style: normal;
 	font-weight: 400;
-
 	background-color: #F8F7F5;
-
-	padding-bottom: 600px;
 }
 
-/* .nunito {
-	font-family: "Nunito", sans-serif;
-	font-optical-sizing: auto;
-	font-weight: 700;
-	font-style: normal;
-} */
 .container {
 	margin: 0 auto;
 	max-width: 1806px;
@@ -24,4 +15,8 @@ body {
 
 .container--small {
 	max-width: 1144px;
+}
+
+.none {
+	display: none !important;
 }
