--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 @import "fonts.css";
 @import "vars.css";
 @import "base.css";
+@import "hover-active.css";
 /* BLOCKS */
 @import "btn.css";
 @import "logo.css";
